# 指定最低的CMAKE版本
CMAKE_MINIMUM_REQUIRED(VERSION 3.10 FATAL_ERROR)

# 创建项目
PROJECT(PPF)

#启动对C++14标准的支持
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
# 显式要求指明支持C++标准
SET(CMAKE_CXX_STANDARD 14)
# 启动对C14标准的支持
SET(CMAKE_C_STANDARD 14)
# 显式要求指明支持C标准
SET(CMAKE_C_STANDARD_REQUIRED ON)


# 查找第三方依赖库
FIND_PACKAGE(PCL 1.12 REQUIRED)

# 添加可执行文件
ADD_EXECUTABLE(PPF src/main.cpp)

# 添加头文件目录
TARGET_INCLUDE_DIRECTORIES(PPF PRIVATE ${PCL_INCLUDE_DIRS})

# 添加库目录
TARGET_LINK_DIRECTORIES(PPF PRIVATE ${PCL_LIBRARY_DIRS})

# 添加编译器定义
TARGET_COMPILE_DEFINITIONS(PPF PRIVATE ${PCL_DEFINITIONS})

# 取消已有的编译器定义
SET_TARGET_PROPERTIES(PPF PROPERTIES COMPILE_FLAGS "/UBOOST_ALL_NO_LIB-DBOOST_ALL_NO_LIB")

# 添加依赖库文件
target_link_libraries(PPF PRIVATE ${PCL_LIBRARIES})
